modules/network/internet_gateway.tf
resource "aws_internet_gateway" "igw" {
  vpc_id                    = aws_vpc.main.id

  tags = {
    Name                    = "${var.cluster_name} internet gateway"
  }
}
