modules/network/vpc.tf
resource "aws_vpc" "main" {
  cidr_block                = var.aws_cidr
  enable_dns_hostnames      = true
  enable_dns_support        = true

  tags = {
    Name                    = "${var.cluster_name} VPC"
  }
}
